--- a/examples/generate_noise_in_frequency_domain.ipynb
+++ b/examples/generate_noise_in_frequency_domain.ipynb
@@ -73,7 +73,7 @@
    ],
    "source": [
     "import sys\n",
-    "!{sys.executable} -m pip install pycbc lalsuite ligo-common --no-cache-dir"
+    "!{sys.executable} -m pip install pycbc --no-cache-dir"
    ]
   },
   {
