--- a/tutorial/4_ChisqSignificance.ipynb
+++ b/tutorial/4_ChisqSignificance.ipynb
@@ -74,7 +74,7 @@
    ],
    "source": [
     "import sys\n",
-    "!{sys.executable} -m pip install pycbc lalsuite ligo-common --no-cache-dir"
+    "!{sys.executable} -m pip install pycbc --no-cache-dir"
    ]
   },
   {
