--- a/tutorial/inference_1_ModelsAndPEByHand.ipynb
+++ b/tutorial/inference_1_ModelsAndPEByHand.ipynb
@@ -97,7 +97,7 @@
    "source": [
     "\n",
     "import sys\n",
-    "!{sys.executable} -m pip install pycbc lalsuite ligo-common --no-cache-dir"
+    "!{sys.executable} -m pip install pycbc emcee==2.2.1 --no-cache-dir"
    ]
   },
   {
