--- a/tutorial/inference_3-AnalyticExample/IntroToPyCBCInference1.ipynb
+++ b/tutorial/inference_3-AnalyticExample/IntroToPyCBCInference1.ipynb
@@ -109,7 +109,7 @@
    ],
    "source": [
     "import sys\n",
-    "!{sys.executable} -m pip install pycbc emcee==2.2.1 --no-cache-dir\n",
+    "!{sys.executable} -m pip install pycbc ligo-common emcee==2.2.1 --no-cache-dir\n",
     "\n",
     "# This is needed to access the executables on sciserver. On a personal machine this should be ignore.\n",
     "path = %env PATH\n",
