--- a/examples/gw150914_look.ipynb
+++ b/examples/gw150914_look.ipynb
@@ -40,7 +40,7 @@
    ],
    "source": [
     "import sys\n",
-    "!{sys.executable} -m pip install pycbc --no-cache-dir"
+    "!{sys.executable} -m pip install pycbc ligo-common --no-cache-dir"
    ]
   },
   {
