--- a/examples/gw170104_look.ipynb
+++ b/examples/gw170104_look.ipynb
@@ -50,7 +50,7 @@
    ],
    "source": [
     "import sys\n",
-    "!{sys.executable} -m pip install pycbc --no-cache-dir"
+    "!{sys.executable} -m pip install pycbc ligo-common --no-cache-dir"
    ]
   },
   {
