--- a/tutorial/inference_0_Overview.ipynb
+++ b/tutorial/inference_0_Overview.ipynb
@@ -78,7 +78,7 @@
    ],
    "source": [
     "import sys\n",
-    "!{sys.executable} -m pip install pycbc emcee=2.2.1 --no-cache-dir"
+    "!{sys.executable} -m pip install pycbc ligo-common emcee=2.2.1 --no-cache-dir"
    ]
   },
   {
