--- a/tutorial/inference_7_AddingCustomWaveform.ipynb
+++ b/tutorial/inference_7_AddingCustomWaveform.ipynb
@@ -117,7 +117,7 @@
    ],
    "source": [
     "import sys\n",
-    "!{sys.executable} -m pip install pycbc lalsuite --no-cache-dir\n",
+    "!{sys.executable} -m pip install pycbc ligo-common lalsuite --no-cache-dir\n",
     "!{sys.executable} -m pip install git+https://github.com/gwastro/example-waveform-plugin"
    ]
   },
