--- a/tutorial/inference_8_BHRingdown.ipynb
+++ b/tutorial/inference_8_BHRingdown.ipynb
@@ -342,7 +342,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!timeout 300 \\\n"
+    "!timeout 300 \\\n",
     "    pycbc_inference --verbose \\\n",
     "    --config-files model.ini data.ini prior.ini sampler.ini \\\n",
     "    --output-file inference.hdf \\\n",
