add links; remove stuff about BaseDataModel

--- a/tutorial/inference_9_AddingCustomModels.ipynb
+++ b/tutorial/inference_9_AddingCustomModels.ipynb
@@ -7,16 +7,16 @@
    "source": [
     "# Adding and using a custom model in PyCBC Inference\n",
     "\n",
-    "PyCBC offers the ability to make plug-in models for custom likelihood functions for Bayesian inference. While PyCBC was initially designed to do gravitational-wave data analysis, the ability to accept plug-in models means that PyCBC can be used to do Bayesian inference on virtually any problem. Creating a PyCBC plug-in model that wraps your likelihood function allows you to use PyCBC Inference to sample the parameter space of your problem. You can also combine a plug-in model with one of the built-in models (or other plug-in models) via the HierarchicalModel, thereby allowing for joint GW/anything-else Bayesian inference. Crucially, you can do this without needing to modify the PyCBC source code nor the source code of the target likelihood function. The plug-in simply allows the two pieces of code to talk to each other.\n",
+    "PyCBC offers the ability to make plug-in models for custom likelihood functions for Bayesian inference. While PyCBC was initially designed to do gravitational-wave data analysis, the ability to accept plug-in models means that PyCBC can be used to do Bayesian inference on virtually any problem. Creating a PyCBC plug-in model that wraps your likelihood function allows you to use PyCBC Inference to sample the parameter space of your problem. You can also combine a plug-in model with one of the built-in models (or other plug-in models) via the [HierarchicalModel](http://pycbc.org/pycbc/latest/html/pycbc.inference.models.html#pycbc.inference.models.hierarchical.HierarchicalModel), thereby allowing for joint GW/anything-else Bayesian inference. Crucially, you can do this without needing to modify the PyCBC source code nor the source code of the target likelihood function. The plug-in simply allows the two pieces of code to talk to each other.\n",
     "\n",
     "The basic requirements for creating a plugin model are:\n",
-    " 1. Create a model class that inherits from PyCBC's BaseModel.\n",
+    " 1. Create a model class that inherits from PyCBC's [BaseModel](http://pycbc.org/pycbc/latest/html/pycbc.inference.models.html#pycbc.inference.models.base.BaseModel).\n",
     " 1. Give the model a `name`, implement a `_loglikelihood` function, and (optionally) a `from_config` function.\n",
     " 1. Add an `entry_points` argument with the appropriate values to the `setup` function in your `setup.py` file. \n",
     "\n",
     "The first two steps are needed so that your likelihood function can be called with the API that PyCBC Inference understands. The last step is needed so that PyCBC Inference can detect your model and use it.\n",
     "\n",
-    "In this tutorial we will demonstrate how to set up simple plug-in models, which we will register with PyCBC and use. We will also discuss how to create a setup file so that your models can be detected by `pycbc_inference` at run time. A working, installable version of the models found here can be found at `URL`."
+    "In this tutorial we will demonstrate how to set up simple plug-in models, which we will register with PyCBC and use. We will also discuss how to create a setup file so that your models can be detected by `pycbc_inference` at run time. A working, installable version of the models found here can be found at  https://github.com/gwastro/example-models-plugin."
    ]
   },
   {
@@ -149,11 +149,11 @@
    "source": [
     "## 1. Simple model example\n",
     "\n",
-    "Below we create a simple analytic model that uses a Poisson distribution as the likelihood function. As mentioned above, to do this we need to inherit from BaseModel, give it a `name`, and implement a `_loglikelihood` function.\n",
+    "Below we create a simple analytic model that uses a Poisson distribution as the likelihood function. As mentioned above, to do this we need to inherit from [BaseModel](http://pycbc.org/pycbc/latest/html/pycbc.inference.models.html#pycbc.inference.models.base.BaseModel), give it a `name`, and implement a `_loglikelihood` function.\n",
     "\n",
-    "First, a little about BaseModel: BaseModel is an abstract base class that has certain abstract methods. This means that it cannot be initiated itself; instead, it is meant to be inherited by children classes. In order to be initialized, these children classes must implement their own versions of the abstract methods. Otherwise, an error will be raised. In this way, the abstract base class defines the necessary API that all classes inheriting from it must implement in order for them to be usable.\n",
+    "First, a little about [BaseModel](http://pycbc.org/pycbc/latest/html/pycbc.inference.models.html#pycbc.inference.models.base.BaseModel): [BaseModel](http://pycbc.org/pycbc/latest/html/pycbc.inference.models.html#pycbc.inference.models.base.BaseModel) is an [abstract base class](https://docs.python.org/3/library/abc.html#module-abc) that has certain \"abstract\" methods. This means that it cannot be initiated itself; instead, it is meant to be inherited by children classes. In order to be initialized, these children classes must implement their own versions of the abstract methods. Otherwise, an error will be raised. In this way, the abstract base class defines the necessary API that all classes inheriting from it must implement in order for them to be usable.\n",
     "\n",
-    "To illustrate this, let's try creating a class that just inherits from BaseModel, but does not implement anything:"
+    "To illustrate this, let's try creating a class that just inherits from `BaseModel`, but does not implement anything:"
    ]
   },
   {
@@ -882,27 +882,6 @@
    ],
    "source": [
     "Image('posterior-possion_burst.png', width=640)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "167c7bed",
-   "metadata": {},
-   "source": [
-    "### Inheriting from `BaseDataModel`\n",
-    "\n",
-    "As stated above, the only requirement for plug-in models is that they inherit from BaseModel. We did this above for both the analytic TestPoisson and the data-based BurstPoisson. However, for models that use data you may wish to inherit from BaseDataModel instead. Like BaseModel, BaseDataModel is an abstract base class. It inherits from BaseModel and adds to it the requirements that children classes implement a `_lognl` and `_loglr` function, in addition to `_loglikelihood`. The `_lognl` function should return the log likelihood assuming the data contains no signal (the noise likelihood). The `_loglr` function should return the log likelihood ratio, which is defined as the likelihood (i.e., the likelihood assuming the data contains a signal) divided by the noise likelihood. From this, you can derive a signal-to-noise ratio (SNR), defined as $\\rho = \\sqrt{2 \\mathcal{L}}$, $\\mathcal{L} \\geq 0; \\textrm{0 otherwise}$, where $\\mathcal{L}$ is the log likelihood ratio.\n",
-    "\n",
-    "Your class will satisfy the requirement that it inherit from `BaseModel` if it inherits from `BaseDataModel`, since `BaseDataModel` itself inherits from `BaseModel`. However, we emphasize that using `BaseDataModel` is not a requirement for models that use data; it is only a convenience."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "938cd96d",
-   "metadata": {},
-   "source": [
-    "#### Challenge:\n",
-    "Rewrite the `PoissonBurst` model above, but inherit from `BaseDataModel`. Implement the required methods, register it, then resample the simulated data using it. Plot the resulting posterior using `pycbc_inference_plot_posterior`, but change the `z-arg` argument to `snr_from_loglr(loglikelihood-lognl):snr` to color points by SNR rather than log likelihood."
    ]
   },
   {
